--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,9 @@
     <!-- <include src="./base/general-components.html"></include> -->
 
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
+    <footer>
+    <include src="./partials/footer.html"></include>
+    </footer>
     <script src="./index.js"></script>
   </body>
 </html>
