Убрал скрол боди модалки,  сделал кнопки в форме

--- a/src/index.html
+++ b/src/index.html
@@ -59,6 +59,8 @@
 
     <script src="./js/menu.js"></script>
     <script src="./js/modal-open-close.js"></script>
+    <script src="./js/btn-disable.js"></script>
+
     <!-- Скрипты слайдера -->
     <script
       type="text/javascript"
