Фиксит скрипт анимации и анимацию заголовков в секции Made

--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     />
+
     <!-- <link
       href="https://fonts.googleapis.com/css2?family=Titan+One&display=swap"
       rel="stylesheet"
@@ -53,13 +54,14 @@
     <include src="./partials/footer.html"></include>
     <include src="./partials/mob-menu.html"></include>
     <include src="./partials/modal-window.html"></include>
-    <include src="./partials/order-form.html"></include> 
+    <include src="./partials/order-form.html"></include>
 
-    <!-- Скрипты модалки и меню -->
+    <!-- Скрипты модалки и меню  и анимации -->
 
     <script src="./js/menu.js"></script>
     <script src="./js/modal-open-close.js"></script>
     <script src="./js/btn-disable.js"></script>
+    <script src="./js/animation.js"></script>
 
     <!-- Скрипты слайдера -->
     <script
