--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ice Cream</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
+    />
     <link rel="shortcut icon" type="image/jpg" href="./images/ice-cream.png" />
     <link
       rel="stylesheet"
@@ -20,7 +24,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     />
-
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"> 
     <!-- <link
       href="https://fonts.googleapis.com/css2?family=Titan+One&display=swap"
       rel="stylesheet"
@@ -35,10 +39,7 @@
       href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Titan+One&display=swap"
       rel="stylesheet"
     />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
-    />
+    
   </head>
   <body>
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
@@ -62,6 +63,7 @@
     <script src="./js/modal-open-close.js"></script>
     <script src="./js/btn-disable.js"></script>
     <script src="./js/animation.js"></script>
+    <script src="./js/back-to-top.js"></script>
 
     <!-- Скрипты слайдера -->
     <script
