--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,10 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     />
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"> 
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"
+    />
     <!-- <link
       href="https://fonts.googleapis.com/css2?family=Titan+One&display=swap"
       rel="stylesheet"
@@ -39,7 +42,6 @@
       href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Titan+One&display=swap"
       rel="stylesheet"
     />
-    
   </head>
   <body>
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
@@ -56,14 +58,14 @@
     <include src="./partials/mob-menu.html"></include>
     <include src="./partials/modal-window.html"></include>
     <include src="./partials/order-form.html"></include>
-
+    <include src="./partials/shine.html"></include>
     <!-- Скрипты модалки и меню  и анимации -->
 
     <script src="./js/menu.js"></script>
     <script src="./js/modal-open-close.js"></script>
     <script src="./js/btn-disable.js"></script>
     <script src="./js/animation.js"></script>
-    <script src="./js/back-to-top.js"></script>
+    <script src="./js/shine-script.js"></script>
 
     <!-- Скрипты слайдера -->
     <script
