restore the button scroll to top

--- a/src/index.html
+++ b/src/index.html
@@ -66,6 +66,7 @@
     <script src="./js/btn-disable.js"></script>
     <script src="./js/animation.js"></script>
     <script src="./js/shine-script.js"></script>
+    <script src="./js/back-to-top.js"></script>
 
     <!-- Скрипты слайдера -->
     <script
